New in master
=============

Features
--------

* Use ``PRETTY_URLS`` by default on all sites (Issue #1838)
* Feed link generation is completely refactored (Issue #2844)
* Added ``extract_metadata`` and ``split_metadata`` to the
  ``utils`` module, which are used by the metadata extraction
  facilities in the ``post`` module.

Bugfixes
--------

* Fix crash when compiling empty ``.html`` posts (Issue #2851)
* Make failures to get source commit hash non-fatal in
  ``github_deploy`` (Issue #2847)
* Less cryptic error when guessing format from extension in ``new_post``
  fails
* Use Jupyter name more consistently in docs
* Support CODE_COLOR_SCHEME in Jupyter notebooks (Issue #2093)
* Language was not passed to title and link generation for page indexes

Removed features
----------------

* Removed the slides directive for docutils, it will now be a separate plugin.
* Drop Python 2 support
* Remove ``nikola install_theme`` — use ``nikola theme`` instead
* Drop insecure post encryption feature
* Stop supporting all deprecated config options
* Drop annotations support (annotateit.org closed down in March 2017)
* Remove taxonomy option ``also_create_classifications_from_other_languages``
  (Issue #2785)
* Removed old 7-line metadata format (Issue #2839)

New in v7.8.8
=============

This release fixes two grave bugs in TOML metadata support (sorry!).
The built-in themes have also been cleaned up and include less unused
assets. In addition, taxonomies now support translations. HTML meta
tags are also possible metadata sources. The default metadata format
to generate can now be changed.

Features
--------

* Providing infrastructure for taxonomies for classification pages to
  link to related classifications in other languages
* Added alternate links (visible and header) for archives and authors
  (Issue #993)
* Added options to add alternative links (visible and header) for
  tags, sections and categories.
* New METADATA_FORMAT option to choose preferred metadata format